# pagi-digital-twin

./: .env.example  .gitignore  .privacyignore  ENV_SETUP.md  Makefile  README.md  TEST_CONFIG.md  docker-compose.yml  start-backend.ps1  stop-backend.ps1  tmp_color_hits.json  tmp_tailwind_palette_hits.json
.github/workflows/: privacy-check.yml  validate-playbooks.yml
backend-go-agent-planner/: Dockerfile  go.mod  go.sum  main.go
backend-go-agent-planner/agent/: planner.go
backend-go-agent-planner/audit/: audit.go
backend-go-bff/: Dockerfile  go.mod  main.go
backend-go-model-gateway/: Dockerfile  README.md  go.mod  go.sum  http_server.go  main.go  tracer.go  vector_db_client.go  vector_test_endpoint_test.go
backend-go-model-gateway/proto/: model.pb.go  model.proto  model_grpc.pb.go
backend-go-model-gateway/service/: model_gateway.go
backend-go-notification-service/: Dockerfile  go.mod  main.go
backend-python-agent/: Dockerfile  agent_loop.py  grpc_client.py  instrumentation.py  main.py  memory_client.py  requirements.txt  tool_executor.py  tool_parser.py
backend-python-agent/proto/: __init__.py  model_pb2.py  model_pb2_grpc.py
backend-python-memory/: Dockerfile  main.py  memory_service.py  requirements.txt
backend-python-memory/proto/: model.proto  model_pb2.py  model_pb2_grpc.py
backend-rust-build/: Cargo.toml  Dockerfile  README.md  build.rs
backend-rust-build/docs/: build_service.md
backend-rust-build/proto/: build.proto
backend-rust-build/src/: main.rs
backend-rust-gateway/: Cargo.toml  Dockerfile  README.md
backend-rust-gateway/src/: main.rs
backend-rust-memory/: Cargo.toml  Dockerfile  README.md  build.rs
backend-rust-memory/proto/: memory.proto
backend-rust-memory/src/: main.rs
backend-rust-orchestrator/: Cargo.toml  Dockerfile  LEADERSHIP_KB_INTEGRATION.md  README.md  README_SOVEREIGN_SETUP.md  SOVEREIGN_PERMISSIONS.md  UNLIMITED_ACCESS_SETUP.md  build.rs
backend-rust-orchestrator/config/: sudoers.agi-orchestrator  sudoers.agi-orchestrator.macos  system_prompt.txt
backend-rust-orchestrator/docs/: PHOENIX_CONSENSUS_AND_MEMORY_EXCHANGE.md
backend-rust-orchestrator/examples/: README_INCIDENT_RESPONSE_KB.md  README_KB_INGESTION.md  README_LEADERSHIP_KB.md  README_SYSTEM_CONFIG_KB.md  README_THREAT_INTEL_KB.md  ingest_incident_response_kb.rs  ingest_leadership_kb.rs  ingest_system_config_kb.rs  ingest_threat_intel_kb.rs
backend-rust-orchestrator/proto/: handshake.proto  memory_exchange.proto  orchestrator.proto  orchestrator_admin.proto
backend-rust-orchestrator/src/: agent_library.rs  email_teams_monitor.rs  health.rs  main.rs  playbook_distiller.rs  preferences.rs  project_watcher.rs
backend-rust-orchestrator/src/agents/: factory.rs  loader.rs  mod.rs  persona.rs
backend-rust-orchestrator/src/analytics/: leaderboard.rs  mesh_health.rs  mod.rs
backend-rust-orchestrator/src/api/: feedback_storage.rs  knowledge_pathfinding.rs  mod.rs  phoenix_routes.rs  playbook_routes.rs  reports.rs
backend-rust-orchestrator/src/bus/: mod.rs
backend-rust-orchestrator/src/foundry/: compliance_monitor.rs  forge_api.rs  mod.rs  optimizer.rs
backend-rust-orchestrator/src/knowledge/: domain_router.rs  ingestor.rs  mod.rs
backend-rust-orchestrator/src/memory/: mod.rs  optimizer.rs  vacuum.rs
backend-rust-orchestrator/src/network/: consensus.rs  discovery.rs  fleet.rs  handshake.rs  immune_system.rs  mdns.rs  memory_exchange.rs  mod.rs  quarantine.rs
backend-rust-orchestrator/src/security/: mod.rs  scrubber.rs
backend-rust-orchestrator/src/services/: mod.rs  playbook_indexer.rs
backend-rust-orchestrator/src/tools/: audit_archiver.rs  doctor.rs  git.rs  github_tool_finder.rs  mod.rs  monitor.rs  network_scanner.rs  nmap_models.rs  playbook_store.rs  safe_installer.rs  system.rs
backend-rust-orchestrator/tests/: ingestion_stress_test.rs
backend-rust-sandbox/: Cargo.toml  Dockerfile  build.rs
backend-rust-sandbox/src/: main.rs  tool.rs  tool_executor.rs  tool_service.rs  tool_web_search.rs
backend-rust-telemetry/: Cargo.toml  Dockerfile  README.md  build.rs
backend-rust-telemetry/src/: main.rs  orchestrator_client.rs  transcription_worker.rs
backend-rust-telemetry/src/media/: mod.rs
backend-rust-telemetry/tests/: integration_tests.rs
backend-rust-tools/: Cargo.toml  Dockerfile  README.md  build.rs
backend-rust-tools/proto/: tools.proto
backend-rust-tools/src/: main.rs
docs/: CI_CD_PLAN.md  CONFIGURATION.md  EVOLUTIONARY_LAYER.md  P09_FRONTEND_INTEGRATION_AUDIT.md  PRODUCTION_READINESS_AUDIT.md  PROJECT_DELIVERY_SUMMARY.md  QDRANT_SETUP.md  SECURITY_GATES.md  agent_planner_loop.md  build_service.md  playbook_definition.md
frontend-digital-twin/: .gitignore  App.tsx  Dockerfile  ENV_SETUP.md  README.md  THEMING.md  constants.tsx  env.d.ts  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
frontend-digital-twin/components/: AgentForge.tsx  AgentLeaderboard.tsx  AgentVitality.tsx  AgentWarRoom.tsx  AttributionAnalytics.tsx  CapabilityHeatmap.tsx  ChatArea.tsx  (+40 more)
frontend-nextjs-agent-ui/: package.json
observability/: prometheus.yml
pagi-chat-desktop-backend/: Cargo.toml
pagi-chat-desktop-backend/src/: main.rs  protocol.rs
pagi-chat-desktop-backend/src/llm_client/: mod.rs
pagi-companion-core/: Cargo.toml
pagi-companion-core/src/: lib.rs
pagi-companion-core/src/agent/: mod.rs
pagi-companion-core/src/memory/: mod.rs
scripts/: Dockerfile  README_TESTING.md  WINDOWS_UNLIMITED_ACCESS_QUICKSTART.md  check_agi_health.ps1  check_agi_health.sh  ferrellgas_scrubber.py  gen_certs.sh  gen_go_stubs.sh  generate_agi_assets.py  mock_memory_service.py  phoenix-join.ps1  phoenix-join.sh  phoenix_analyzer.py  refactor_frontend_colors.mjs  run_all_dev.py  setup_sovereign_permissions.ps1  setup_sovereign_permissions.sh  setup_windows_unlimited_access.ps1  smoke_project_chat.ps1  test_e2e.ps1  test_e2e.sh  validate_privacy.py  verify_build.rs  verify_e2e_audit.sh
tests/: e2e_test_script.md  qdrant_test.md
tools_repo/: README.md
(+65 files in other folders)
