[package]
name = "backend-rust-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12.3"
