[package]
name = "backend-rust-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
service-manager = "0.10"
sysinfo = "0.33"
quick-xml = { version = "0.37", features = ["serialize"] }
notify = "6.1"
oauth2 = "4.4"
base64 = "0.22"
url = "2.5"
git2 = "0.20"
yaml-rust = "0.4"
regex = "1.10"
qdrant-client = "1.16"
once_cell = "1.19"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
mdns-sd = "0.7"
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
walkdir = "2.4"
fastembed = "5.8.1"
ort = "2.0.0-rc.11"
tokenizers = "0.19"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
petgraph = "0.6"
cron = "0.12"
urlencoding = "2.1"

[build-dependencies]
tonic-build = "0.12.3"
