[package]
name = "backend-rust-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.12", features = ["json"] }
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.5"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
dotenvy = "0.15" # To load environment variables for bare metal

[build-dependencies]
tonic-build = "0.12.3"

