[package]
name = "backend-rust-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sysinfo = "0.30"
futures-core = "0.3"
async-stream = "0.3"
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
notify = "6.1"

[build-dependencies]
tonic-build = "0.12.3"

